--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
+    "react-router-tabs": "^1.3.2",
     "react-scripts": "^3.4.1",
     "react-useinterval": "^1.0.1",
     "redux": "^4.0.5",
