update func. add access dontrol user auth

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "history": "^4.10.1",
-    "i18next": "^19.4.5",
+    "i18next": "^19.5.1",
     "i18next-browser-languagedetector": "^4.2.0",
+    "i18next-http-backend": "^1.0.15",
     "i18next-localstorage-cache": "^1.1.1",
     "i18next-xhr-backend": "^3.2.2",
     "material-components-web": "^6.0.0",
