--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-useinterval": "^1.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "redux-form": "^8.3.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "typescript": "^3.9.3",
