--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/user-event": "^7.2.1",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/react-router-tabs": "^1.3.1",
+    "@types/redux-form": "^8.3.0",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "history": "^4.10.1",
@@ -23,7 +25,7 @@
     "material-table": "^1.62.0",
     "moment": "^2.26.0",
     "muicss": "^0.10.2",
-    "npm": "^6.14.5",
+    "npm": "^6.14.8",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-cookie": "^4.0.3",
@@ -34,7 +36,7 @@
     "react-router-dom": "^5.2.0",
     "react-router-redux": "^4.0.8",
     "react-router-tabs": "^1.3.2",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^3.4.3",
     "react-useinterval": "^1.0.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
