--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.0",
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
@@ -15,10 +16,11 @@
     "@types/redux-form": "^8.3.0",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
+    "graphql": "^15.3.0",
     "history": "^4.10.1",
     "i18next": "^19.5.1",
     "i18next-browser-languagedetector": "^4.2.0",
-    "i18next-http-backend": "^1.0.15",
+    "i18next-http-backend": "^1.0.20",
     "i18next-localstorage-cache": "^1.1.1",
     "i18next-xhr-backend": "^3.2.2",
     "material-components-web": "^6.0.0",
@@ -50,7 +52,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "graphql-gen": "graphql-codegen --config codegen.yml"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -68,6 +71,11 @@
     ]
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "1.17.8",
+    "@graphql-codegen/introspection": "^1.17.8",
+    "@graphql-codegen/typescript": "^1.17.9",
+    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "^2.0.6",
     "regenerator-runtime": "^0.13.5"
   }
 }
