--- a/codegen.yml
+++ b/codegen.yml
@@ -11,5 +11,6 @@ generates:
     plugins:
       - "introspection"
 
-    config:
-      withHOC: true
+    # config:
+      
+    #   withHOC: true
