--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "universal-cookie": "^4.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "graphql-codegen --config codegen.yml && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
